[gd_scene load_steps=2 format=3 uid="uid://title_screen"]

[ext_resource type="Script" path="res://scripts/ui/title_screen.gd" id="1_title"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_title")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="VignetteTop" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.5)

[node name="VignetteBottom" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.5)

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 72
text = "W.F.H."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_font_sizes/font_size = 18
text = "Work From Home"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="TitleContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="MenuContainer" type="VBoxContainer" parent="TitleContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NewGameButton" type="Button" parent="TitleContainer/MenuContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "New Game"

[node name="LoadGameButton" type="Button" parent="TitleContainer/MenuContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
theme_override_font_sizes/font_size = 20
text = "Load Game"

[node name="QuitButton" type="Button" parent="TitleContainer/MenuContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.4, 0.45, 1)
theme_override_font_sizes/font_size = 12
text = "v0.1.0"
horizontal_alignment = 2
vertical_alignment = 2
